#38 Build multi release jar (MRJAR) that runs with Java 8 or 11+